# lory

./: Cargo.toml  README.md
src/: ast.rs  lexer.rs  lib.rs  parser.rs  span.rs
tests/: lexer.rs  parser.rs
tests/lexer/: comments.lox  identifiers.lox  keywords.lox  numbers.lox  punctuators.lox  strings.lox  unexpectedchar.lox  whitespace.lox
tests/snapshots/: lexer__comments.snap  lexer__identifiers.snap  lexer__keywords.snap  lexer__numbers.snap  lexer__punctuators.snap  lexer__strings.snap  lexer__unexpectedchar.snap  lexer__whitespace.snap  parser__expression.snap
