[package]
name = "lory"
version = "0.1.0"
edition = "2021"
authors = ["Amal <azryx.0@gmail.com>"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
phf = { version = "0.11.1", features = ["macros"] }
thiserror = "1.0.38"

[dev-dependencies]
insta = "1.28.0"
